; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_set_value.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_set_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.table = type { %struct.TYPE_2__*, i32* }
%struct.TYPE_2__ = type { i32 }

@COL_TYPE_MASK = common dso_local global i32 0, align 4
@WBEM_E_TYPE_MISMATCH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"unhandled column type %u\0A\00", align 1
@WBEM_E_FAILED = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_value(%struct.table* %0, i64 %1, i64 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.table*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  store %struct.table* %0, %struct.table** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %15 = load %struct.table*, %struct.table** %7, align 8
  %16 = getelementptr inbounds %struct.table, %struct.table* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load i64, i64* %9, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @COL_TYPE_MASK, align 4
  %23 = and i32 %21, %22
  %24 = load i32, i32* %11, align 4
  %25 = icmp ne i32 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %5
  %27 = load i32, i32* @WBEM_E_TYPE_MISMATCH, align 4
  store i32 %27, i32* %6, align 4
  br label %96

28:                                               ; preds = %5
  %29 = load %struct.table*, %struct.table** %7, align 8
  %30 = load i64, i64* %9, align 8
  %31 = call i64 @get_column_offset(%struct.table* %29, i64 %30)
  store i64 %31, i64* %12, align 8
  %32 = load %struct.table*, %struct.table** %7, align 8
  %33 = call i64 @get_row_size(%struct.table* %32)
  store i64 %33, i64* %13, align 8
  %34 = load %struct.table*, %struct.table** %7, align 8
  %35 = getelementptr inbounds %struct.table, %struct.table* %34, i32 0, i32 1
  %36 = load i32*, i32** %35, align 8
  %37 = load i64, i64* %8, align 8
  %38 = load i64, i64* %13, align 8
  %39 = mul i64 %37, %38
  %40 = getelementptr inbounds i32, i32* %36, i64 %39
  %41 = load i64, i64* %12, align 8
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  store i32* %42, i32** %14, align 8
  %43 = load %struct.table*, %struct.table** %7, align 8
  %44 = getelementptr inbounds %struct.table, %struct.table* %43, i32 0, i32 0
  %45 = load %struct.TYPE_2__*, %struct.TYPE_2__** %44, align 8
  %46 = load i64, i64* %9, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i64 %46
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = load i32, i32* @COL_TYPE_MASK, align 4
  %51 = and i32 %49, %50
  switch i32 %51, label %90 [
    i32 137, label %52
    i32 132, label %52
    i32 133, label %58
    i32 128, label %62
    i32 136, label %66
    i32 131, label %70
    i32 135, label %74
    i32 130, label %78
    i32 134, label %82
    i32 129, label %86
  ]

52:                                               ; preds = %28, %28
  %53 = load i8*, i8** %10, align 8
  %54 = ptrtoint i8* %53 to i64
  %55 = inttoptr i64 %54 to i32*
  %56 = load i32*, i32** %14, align 8
  %57 = bitcast i32* %56 to i32**
  store i32* %55, i32** %57, align 8
  br label %94

58:                                               ; preds = %28
  %59 = load i8*, i8** %10, align 8
  %60 = load i32*, i32** %14, align 8
  %61 = bitcast i32* %60 to i8**
  store i8* %59, i8** %61, align 8
  br label %94

62:                                               ; preds = %28
  %63 = load i8*, i8** %10, align 8
  %64 = load i32*, i32** %14, align 8
  %65 = bitcast i32* %64 to i8**
  store i8* %63, i8** %65, align 8
  br label %94

66:                                               ; preds = %28
  %67 = load i8*, i8** %10, align 8
  %68 = load i32*, i32** %14, align 8
  %69 = bitcast i32* %68 to i8**
  store i8* %67, i8** %69, align 8
  br label %94

70:                                               ; preds = %28
  %71 = load i8*, i8** %10, align 8
  %72 = load i32*, i32** %14, align 8
  %73 = bitcast i32* %72 to i8**
  store i8* %71, i8** %73, align 8
  br label %94

74:                                               ; preds = %28
  %75 = load i8*, i8** %10, align 8
  %76 = load i32*, i32** %14, align 8
  %77 = bitcast i32* %76 to i8**
  store i8* %75, i8** %77, align 8
  br label %94

78:                                               ; preds = %28
  %79 = load i8*, i8** %10, align 8
  %80 = load i32*, i32** %14, align 8
  %81 = bitcast i32* %80 to i8**
  store i8* %79, i8** %81, align 8
  br label %94

82:                                               ; preds = %28
  %83 = load i8*, i8** %10, align 8
  %84 = load i32*, i32** %14, align 8
  %85 = bitcast i32* %84 to i8**
  store i8* %83, i8** %85, align 8
  br label %94

86:                                               ; preds = %28
  %87 = load i8*, i8** %10, align 8
  %88 = load i32*, i32** %14, align 8
  %89 = bitcast i32* %88 to i8**
  store i8* %87, i8** %89, align 8
  br label %94

90:                                               ; preds = %28
  %91 = load i32, i32* %11, align 4
  %92 = call i32 @FIXME(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %91)
  %93 = load i32, i32* @WBEM_E_FAILED, align 4
  store i32 %93, i32* %6, align 4
  br label %96

94:                                               ; preds = %86, %82, %78, %74, %70, %66, %62, %58, %52
  %95 = load i32, i32* @S_OK, align 4
  store i32 %95, i32* %6, align 4
  br label %96

96:                                               ; preds = %94, %90, %26
  %97 = load i32, i32* %6, align 4
  ret i32 %97
}

declare dso_local i64 @get_column_offset(%struct.table*, i64) #1

declare dso_local i64 @get_row_size(%struct.table*) #1

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
